Rewrite front end with MVVM and added more DI in backend server.

--- a/TickerServer/TickerServer.csproj
+++ b/TickerServer/TickerServer.csproj
@@ -16,6 +16,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MessageObjects\MessageObjects.csproj" />
+    <ProjectReference Include="..\RandomTickerGenerator\RandomTickerGenerator.csproj" />
+    <ProjectReference Include="..\TickerGeneratorInterface\TickerGeneratorInterface.csproj" />
+    <ProjectReference Include="..\TickerServerInterface\TickerServerInterface.csproj" />
   </ItemGroup>
 
   <ItemGroup>
